# Kalm-Benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  README.md  checkov-job.yaml  cluster.yaml  datree-policies.yaml  kubiscan  pyproject.toml  skaffold.yaml  tox.ini
.github/: build-kalm-benchmark.yaml
.github/workflows/: build.yml  generate-manifests.yml
data/: ccss_evaluation.db  datree_v1.6.6_2022-08-12.json  datree_v1.9.19_2024-01-16.json  kics_v1.5.14_2022-08-30.json  kics_v1.7.12_2024-01-15.json  kics_v2.1.12_2025-07-28.json  kube-bench_v0.6.9_2022-08-16.json  kube-score_v1.14.0_2022-08-16.json  kube-score_v1.17.0_2024-01-15.json  kubeaudit_v0.19.0_2022-08-16.json  kubelinter_v0.4.0-0-gc37b7551f6_2022-08-16.json  kubelinter_v0.6.5_2024-01-15.json  kubescape_v2.0.148_2022-08-16.json  kubescape_v3.0.1_2023-11-07.json  kubesec_v2.11.5_2022-08-16.json  kubesec_v2.12.0_2022-11-21.json  kubesec_v2.12.0_2024-01-16.json  kubiscan_v1.5_2022-08-16.txt  polaris_v7.0.1_2022-08-16.json  polaris_v8.5.4_2024-01-15.json  snyk_v1.1276.0_2024-02-01.json  snyk_v1.974.0_2022-08-12.json  snyk_v1.980.0_2022-08-12.json  terrascan_v1.15.2_2022-08-16.json  terrascan_v1.18.11_2024-01-15.json  trivy_v0.31.2_2022-08-17.json  trivy_v0.46.0_2023-11-03.json  trivy_v0.49.0_2024-02-01.json
data/analysis/: benchmark_detailed.csv  benchmark_overview.csv  scanner_summary.csv
data/helm_analysis/: common_security_issues.csv  helm_security_overview.csv  scanner_performance_helm.csv
data/severity_analysis/: analysis_summary.md  multi_scanner_detections.csv  scanner_reliability_scores.csv  scanner_severity_coverage.csv  severity_distribution_matrix.csv  severity_normalized_results.csv
docs/: KALM-check-catalog.xlsx  KALM-check-catalog_old.xlsx  benchmark-checks.md  deployment.md  dev_guide.md  scanner_installation.md  scanner_onboarding_guide.md
kalm_benchmark/: benchmark.py  cli.py  config.py  constants.py  exceptions.py  io.py
kalm_benchmark/evaluation/: category_mapping.py  database.py  evaluation.py  file_index.py  scanner_manager.py  scanner_service.py  service.py  utils.py
kalm_benchmark/manifest_generator/: check.py  constants.py  gen_manifests.py  gen_namespaces.py  network_policy.py  pod_security_admission.py  pod_security_policy.py  (+3 more)
manifests/: _default-priority-c8fbe908.yaml  _kalm-benchmark-c882ce07.yaml  _kalm-benchmark-unrestricted-ns-c849031e.yaml  cm-001-sensitive-key-referenced-in-configmap.yaml  np-001-namespace-without-network-policy.yaml  np-002-1-only-ingress-is-blocked.yaml  np-002-2-only-egress-is-blocked.yaml  np-003-network-policy-allows-access-to-cloud-metadata-api.yaml  np-004-network-policy-allows-access-to-kubelet.yaml  np-005-network-policy-refers-no-valid-workload.yaml  ns-001-use-default-namespace.yaml  ns-002-1-place-pod-in-kube-system.yaml  ns-002-2-place-pod-in-kube-public.yaml  pod-002-1-explicit-default-sa.yaml  pod-002-1-explicit-default-serviceaccountname.yaml  pod-002-2-no-sa-specified.yaml  pod-002-2-no-serviceaccountname-specified.yaml  pod-003-1-automount-serviceaccounttoken-by-default.yaml  pod-003-1-default-pod-and-sa.yaml  pod-003-2-default-pod-automount-sa.yaml  pod-003-3-default-pod-no-automount-sa.yaml  pod-003-4-automount-pod-default-sa.yaml  pod-003-5-automount-pod-and-sa.yaml  pod-003-6-automount-pod-no-automount-sa.yaml  pod-003-7-no-automount-pod-default-sa.yaml  pod-003-8-no-automount-pod-automount-sa.yaml  pod-003-9-no-automount-pod-and-sa.yaml  pod-008-1-hostpid-flag-not-set.yaml  pod-008-1-use-no-hostpid.yaml  pod-008-2-hostpid-flag-set.yaml  pod-008-2-pod-has-hostpid-set.yaml  pod-009-1-hostipc-flag-not-set.yaml  pod-009-1-use-no-hostipc.yaml  pod-009-2-has-hostipc-set.yaml  pod-009-2-hostipc-flag-set.yaml  pod-010-1-hostnetwork-flag-not-set.yaml  pod-010-1-use-no-hostnetwork.yaml  pod-010-2-has-hostnetwork-set.yaml  pod-010-2-hostnetwork-flag-set.yaml  pod-011-pod-uses-hostport.yaml  (+277 more)
notebooks/: benchmark_analysis.ipynb  categorization_analysis.ipynb  evaluation.ipynb  helm_chart_analysis.ipynb  severity_comparison_analysis.ipynb
tests/: conftest.py  test_benchmark.py  test_cli.py  test_helm.py  test_helm_mapping.py  test_integration.py  test_property_based_validation.py  test_utils.py
(+95 files in other folders)
