[tool.poetry]
name = "kalm-benchmark"
version = "0.1.0"
description = "A tool for comparing and evaluation various (compliance) scanners for Kubernetes"
authors = ["Markus Gierlinger <markus.gierlinger@dynatrace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
cdk8s = "^2.2"
pandas = "^2.0.3"
StrEnum = "^0.4.7"
streamlit = "^1.37.0"
altair = "^5.0.1"
loguru = "^0.7.0"
PyYAML = "^6.0"
exceptiongroup = "^1.0.0-rc.3"
tabulate = "^0.9.0"
streamlit-aggrid = "^0.3.4.post3"
pyarrow = "^14.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
isort = "^5.10"
black = "^24.3.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
jupyter = "^1.0.0"
pytest-mock = "^3.7.0"
pyfakefs = "^5.2.4"
pytest-subprocess = "^1.4.1"
tox = "^4.10.0"
cyclonedx-bom = "^3.11.2"


[tool.poetry.scripts]
cli = "kalm_benchmark.cli:app"
kalm-benchmark = "kalm_benchmark.cli:app"

# section is used by tox.ini
[tool.poetry.extras]
test = ["pytest"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
